# shellpowerplusplus

./: .gitignore  CMakeLists.txt  Makefile  README.md  REQUIREMENTS.md  USER_MANUAL.md
.github/workflows/: workflow.yml
src/: app.c  app.h  auto_layout.c  auto_layout.h  camera.c  camera.h  gui.c  main.c  stl_loader.c  stl_loader.h  updater.c  updater.h  version.h.in
src/simulation/: iv_trace.c  iv_trace.h  string_sim.c  string_sim.h
